added the mid sections and the pricing cards

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -84,13 +84,124 @@
           </div>
         </div>
     </div>
-    <div class="container"><hr></div>
 
+    <br>
+    <div class="container mx-auto flex"><hr></div>
+    <br>
+
+    <div class="container after_break">
+        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Title</h1>
+        <div class="container mx-auto flex rounded" id="short-hr"><hr></div>
+        <br>
+        <div class="row">
+            <div class="col-sm">
+                <small>Getting started x</small>
+                <div class="mx-auto column-text">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem non aut enim molestiae cumque necessitatibus consequuntur ipsa debitis, facilis doloribus, et laborum, ab aspernatur earum explicabo asperiores distinctio beatae sed.</p>
+                </div>
+            </div>
+            <div class="col-sm">
+                <small>Getting started y</small>
+                <div class="mx-auto column-text">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem non aut enim molestiae cumque necessitatibus consequuntur ipsa debitis, facilis doloribus, et laborum, ab aspernatur earum explicabo asperiores distinctio beatae sed.</p>
+                </div>
+            </div>
+            <div class="col-sm">
+                <small>Getting started z</small>
+                <div class="mx-auto column-text">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem non aut enim molestiae cumque necessitatibus consequuntur ipsa debitis, facilis doloribus, et laborum, ab aspernatur earum explicabo asperiores distinctio beatae sed.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="container mx-auto flex"><hr></div>
+
+
+    
+    <!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
+    <div class="container">
+        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center">Pricing</h1>
+        <div class="container mx-auto flex rounded" id="short-hr"><hr></div>
+    <section class="pricing py-5">
+        <div class="container">
+        <div class="row">
+            <!-- Free Tier -->
+            <div class="col-lg-4">
+            <div class="card mb-5 mb-lg-0">
+                <div class="card-body">
+                <h5 class="card-title text-muted text-uppercase text-center">Free</h5>
+                <h6 class="card-price text-center">$0<span class="period">/month</span></h6>
+                <hr>
+                <ul class="fa-ul">
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Single User</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>5GB Storage</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
+                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Unlimited Private Projects</li>
+                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Dedicated Phone Support</li>
+                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Free Subdomain</li>
+                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
+                </ul>
+                <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                </div>
+            </div>
+            </div>
+            <!-- Plus Tier -->
+            <div class="col-lg-4">
+            <div class="card mb-5 mb-lg-0">
+                <div class="card-body">
+                <h5 class="card-title text-muted text-uppercase text-center">Plus</h5>
+                <h6 class="card-price text-center">$9<span class="period">/month</span></h6>
+                <hr>
+                <ul class="fa-ul">
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>5 Users</strong></li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>50GB Storage</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Dedicated Phone Support</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Free Subdomain</li>
+                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
+                </ul>
+                <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                </div>
+            </div>
+            </div>
+            <!-- Pro Tier -->
+            <div class="col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                <h5 class="card-title text-muted text-uppercase text-center">Pro</h5>
+                <h6 class="card-price text-center">$49<span class="period">/month</span></h6>
+                <hr>
+                <ul class="fa-ul">
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited Users</strong></li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>150GB Storage</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Dedicated Phone Support</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited</strong> Free Subdomains</li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Monthly Status Reports</li>
+                </ul>
+                <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                </div>
+            </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    </div>
     
 
 
     <!-- Javascript and Jquery -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
 </body>
 </html>
